--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
     <script>
       $(function() { setupCodeCopy(); });
     </script>
+    <link href="images/favicon-32bcb97e.ico" rel="icon" type="image/ico" />
   </head>
 
   <body class="index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;,&quot;python&quot;,&quot;javascript&quot;]">
