deploy: d0801bfe330d5be5dc7e1c6e1fb0590a5fca252f

--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@
               </ul>
           </li>
           <li>
+            <a href="#websocket" class="toc-h1 toc-link" data-title="Websocket">Websocket</a>
+          </li>
+          <li>
             <a href="#errors" class="toc-h1 toc-link" data-title="Errors">Errors</a>
           </li>
       </ul>
@@ -705,12 +708,24 @@ Remember — a happy kitten is an authenticated kitten!
 <td>The ID of the kitten to delete</td>
 </tr>
 </tbody></table>
+<h1 id='websocket'>Websocket</h1>
+<p>In case you need the realtime data, we encourage you to use the websocket endpoint. Most of the realtime data is
+available as websocket channels.</p>
+
+<p>You need to establish a websocket connection to our websocket endpoint:
+<code>
+wss://wsapi.exbito.com/wsapiv2
+</code></p>
+
+<aside class="notice">
+Please note that each Client or IP address can have at most 5 simultaneous connections.
+</aside>
 <h1 id='errors'>Errors</h1>
 <p>All non-successful responses have status code between 400-499. For the API with more than one error code, you can
 read <code>X-Reason</code> header on the response to find out more info about the error.</p>
 
 <aside class="notice">
-The `X-Reason` headers might not be avauilable on some errors. But in most case keeping an eye on `X-Reason` header will help you finding the error reason.
+The `X-Reason` headers might not be available on some errors. But in most cases, keeping an eye on `X-Reason` header will help you finding the error reason.
 </aside>
 
 <p>The Exbito API uses the following error codes:</p>
