deploy: 15f628bf055d3c4acb5f4bf04cf7b2a15ef198d0

--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='https://exbito.com/'>Exbito website</a></li>
+            <li><a href='https://exbito.com/'>Exbito Website</a></li>
             <li><a href='https://app.exbito.com/register'>Exbito Web App</a></li>
             <li><a href='https://play.google.com/store/apps/details?id=com.exbito.app'>Exbito Android App</a></li>
-            <li><a href='https://exbito.com/fees'>Exchange fee rates</a></li>
+            <li><a href='https://exbito.com/fees'>Exchange Fee Rates</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
