deploy: da56198d44ca5e296137a3b8945c5de091bab4f9

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
             <li><a href='https://app.exbito.com/register'>Exbito Web App</a></li>
             <li><a href='https://play.google.com/store/apps/details?id=com.exbito.app'>Exbito Android App</a></li>
             <li><a href='https://exbito.com/fees'>Exchange Fee Rates</a></li>
+            <li><a href='https://github.com/Exbito/exbito-api-docs'>Source Code</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
