deploy: 7355bc464790379f24230a565301fe0ffafccec2

--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@ The `end` , `start` and `interval` must be all positive integer
 <tr>
 <td>interval</td>
 <td>default_depth_interval</td>
-<td>Aggregated the order based on the price</td>
+<td>Aggregate orders based on the price</td>
 </tr>
 <tr>
 <td>limit</td>
